added icons and changed style in about , maindashboard